--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100">
     <nav class="bg-blue-600 p-4 text-white text-center text-xl font-bold">
-        User Management
+        User Management LKS Cloud Computing 2025
     </nav>
     <div class="container mx-auto mt-6">
         {% block content %}{% endblock %}
